--- a/languageen.html
+++ b/languageen.html
@@ -63,7 +63,7 @@
 											<tr>
 												<td><a href="wa.me/86954785254">TEENU</a></br>(Founder)</td>
 												<td><a href="wa.me/86954785254">EN-CUIZER</a></br>(photo creator)</td>
-												<td><a href="wa.me/86954785254">RAMIYA</a></br>(Plugin creator)</td>
+												<td><a href="wa.me/86954785254">RAMIYA</a></br>(co developer)</td>
 												<td><a href="wa.me/86954785254">LUCIFER</a></br>(Group management)</td>
 												<td><a href="wa.me/86954785254">KAVIYAAH</a></br>(Web developer)</td>
 												<td><a href="wa.me/86954785254">PANDA</a></br>(Member)</td>
