--- a/languagesi.html
+++ b/languagesi.html
@@ -53,27 +53,27 @@
 										<tbody>
 											<tr>
 												<td><a href="wa.me/86954785254"><img src="images/newmun.jpg" width="100" height="100" alt="TEENU"></a></td>
-												<td><a href="wa.me/86954785254"><img src="images/newmun.jpg" width="100" height="100" alt="EN-CUIZER"></a></td>
 												<td><a href="wa.me/86954785254"><img src="images/newmun.jpg" width="100" height="100" alt="RAMIYA"></a></td>
+												<td><a href="wa.me/86954785254"><img src="images/newmun.jpg" width="100" height="100" alt="EN-CUIZER"></a></td>
 												<td><a href="wa.me/86954785254"><img src="images/newmun.jpg" width="100" height="100" alt="LUCIFER"></a></td>
 												<td><a href="wa.me/86954785254"><img src="images/newmun.jpg" width="100" height="100" alt="KAVIYAAH"></a></td>
 												<td><a href="wa.me/86954785254"><img src="images/newmun.jpg" width="100" height="100" alt="PANDA"></a></td>
 												<td><a href="wa.me/86954785254"><img src="images/newmun.jpg" width="100" height="100" alt="GANSTER"></a></td>
 												<td><a href="wa.me/86954785254"><img src="images/newmun.jpg" width="100" height="100" alt="MR.FREEZ"></a></td>
-												<td><a href="wa.me/86954785254"><img src="images/newmun.jpg" width="100" height="100" alt="lithira"></a></td>
-												<td><a href="wa.me/86954785254"><img src="images/newmun.jpg" width="100" height="100" alt="chamidu"></a></td>
+												<td><a href="wa.me/86954785254"><img src="images/newmun.jpg" width="100" height="100" alt="LITHIRA"></a></td>
+												<td><a href="wa.me/86954785254"><img src="images/newmun.jpg" width="100" height="100" alt="CHAMIDU"></a></td>
 											</tr>
 											<tr>
-												<td><a href="wa.me/86954785254">TEENU</a></br>(Founder)</td>
-												<td><a href="wa.me/86954785254">EN-CUIZER</a></br>(photo creator)</td>
-												<td><a href="wa.me/86954785254">RAMIYA</a></br>(co developer)</td>
-												<td><a href="wa.me/86954785254">LUCIFER</a></br>(Group management)</td>
+												<td><a href="wa.me/86954785254">TEENU</a></br>(Founder and developer)</td>
+												<td><a href="wa.me/86954785254">RAMIYA</a></br>(co developer)</td>			
+									                        <td><a href="wa.me/86954785254">EN-CUIZER</a></br>(photo creator)</td>
+				                                                                <td><a href="wa.me/86954785254">LUCIFER</a></br>(Group management)</td>
 												<td><a href="wa.me/86954785254">KAVIYAAH</a></br>(Web developer)</td>
 												<td><a href="wa.me/86954785254">PANDA</a></br>(Member)</td>
 												<td><a href="wa.me/86954785254">GANSTER</a></br>(Member)</td>
 												<td><a href="wa.me/86954785254">MR.FREEZ</a></br>(Member)</td>
-												<td><a href="wa.me/86954785254">lithira</a></br>(Member)</td>
-												<td><a href="wa.me/86954785254">chamidu</a></br>(Member)</td>
+												<td><a href="wa.me/86954785254">LITHIRA</a></br>(Member)</td>
+												<td><a href="wa.me/86954785254">CHAMIDU</a></br>(Member)</td>
 											</tr>
 										</tbody>
 									</table>
