--- a/languageen.html
+++ b/languageen.html
@@ -85,7 +85,13 @@
 						<!-- ENGLISH -->
 							<article id="INSTALL">
 								<h2 class="major">How to install our bot?</h2>
-								<span class="image main"><img src="images/withhero.jpg" alt="" /></span>
+
+								<h3 class="major">TUTORIAL video</h3>
+								<video width="560" height="360" alt="TUTORIAL" controls>
+								<source src="videos/tutorialvid.mp4">
+                                                                 </video> 
+								
+								
 								<h2 class="major">Step 01:</h2>
 								<h3>If you have computer,</h3>
 								<p></p>
