--- a/languagesi.html
+++ b/languagesi.html
@@ -87,8 +87,13 @@
 
 						<!-- ENGLISH -->
 							<article id="INSTALL">
-								<h2 class="major">How to install our bot?</h2>
-								<span class="image main"><img src="images/withhero.jpg" alt="" /></span>
+								<h2 class="major">බොට් ස්තාපනය කරන්නේ කෙසේද?</h2>
+	
+								<h3 class="major">TUTORIAL video</h3>
+								<video width="560" height="360" alt="TUTORIAL" controls>
+								<source src="videos/tutorialvideo.mp4">
+                                                                 </video> 
+								
                                 <h2 class="major">පියවර 01:</h2>
                                 <h3>ඔබට පරිගණකයක් තිබේ නම්,</h3>
                                 <p></p>
