--- a/languageen.html
+++ b/languageen.html
@@ -87,9 +87,8 @@
 								<h2 class="major">How to install our bot?</h2>
 
 								<h3 class="major">TUTORIAL video</h3>
-								<video width="560" height="360" alt="TUTORIAL" controls>
-								<source src="videos/tutorialvideo.mp4">
-                                                                 </video> 
+								<iframe width="560" height="360" src="https://www.youtube.com/embed/mcEeIspWOpY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 								
 								
 								<h2 class="major">Step 01:</h2>
