--- a/languagesi.html
+++ b/languagesi.html
@@ -90,9 +90,8 @@
 								<h2 class="major">බොට් ස්තාපනය කරන්නේ කෙසේද?</h2>
 	
 								<h3 class="major">TUTORIAL video</h3>
-								<video width="560" height="360" alt="TUTORIAL" controls>
-								<source src="videos/tutorialvideo.mp4">
-                                                                 </video> 
+								<iframe width="560" height="360" src="https://www.youtube.com/embed/mcEeIspWOpY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 								
                                 <h2 class="major">පියවර 01:</h2>
                                 <h3>ඔබට පරිගණකයක් තිබේ නම්,</h3>
